@@ -10176,9 +10176,12 @@ Video Disk Recorder Revision History
 - Fixed an 'invalid lock sequence' when deleting the timeshift timer.
 - Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).
 
-2025-11-15:
+2025-11-21:
 
 - Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
 - Revised the German language texts (thanks to Stefan Hofmann).
 - The SVDRP command NEWT now returns code 550 if a timer with the same channel, day, start
   and stop time already exists (reported by Robert Hannebauer).
+- cVector::Remove() can now remove more than one elements (also fixed an off-by-one error in
+  the call to memmove()).
+  APIVERSNUM is now 30010.
